@@ -7,3 +7,4 @@ profile/user-settings-kde
 xap/clementine
 kde/k3b
 kde/kscd
+kde/digikam
