@@ -1,0 +1,1 @@
+digikam-*.tar.bz2
