@@ -1,0 +1,12 @@
+       |-----handy-ruler------------------------------------------------------|
+digikam: digiKam (KDE Photo Management Application)
+digikam:
+digikam: digiKam is a simple digital photo management application for KDE,
+digikam: which makes importing and organizing digital photos a "snap". The
+digikam: photos can be organized in albums which can be sorted chronologically,
+digikam: by directory layout or by custom collections. An easy to use interface
+digikam: is provided that enables you to connect to your camera and preview,
+digikam: download and/or delete your images.
+digikam:
+digikam:
+digikam: Package created by Niki Kovacs <info@microlinux.fr>
